<resources>
    <string name="app_name">parkingFinderApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="logo">logo</string>
    <string name="userInput">type here</string>
    <string name="user">user:</string>
    <string name="passward">passward:</string>
    <string name="sign_in">sign in</string>
    <string name="create_new_account">create new account</string>


</resources>
